--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
     <!-- Define your marker with the patt file generated -->
-    <a-marker preset='custom' type='pattern' url='./pattern-heliacell.patt'>
+    <a-marker preset='custom' type='pattern' url='pattern-heliacell2.patt'>
         <!-- Place your content here, for example a video -->
         <a-image src="heliacell.jpg" width="2" height="1"></a-image>
     </a-marker>
