--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Define your marker with the patt file generated -->
     <a-marker preset='custom' type='pattern' url='pattern-marker.patt'>
         <!-- Place your content here, for example a video -->
-        <a-image src="heliacell.jpg" width="2" height="1"></a-image>
+        <a-video src="./helia.mp4" width="2" height="1" position="0 0 0"></a-video>
     </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
