--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
             type="nft"
-            url="./heliacellnft/heliacell"
+            url="heliacellnft/heliacell2"
             smooth="true"
             smoothCount="10"
             smoothTolerance=".01"
             smoothThreshold="5"
     >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-        <a-video src="./helia.mp4" width="2" height="1" position="0 0 0"></a-video>
+        <a-video src="helia.mp4" width="2" height="1" position="0 0 0"></a-video>
 
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
