--- a/index.html
+++ b/index.html
@@ -24,15 +24,37 @@
   }
 </style>
 
+<meta name="apple-mobile-web-app-capable" content="yes">
 <script>
-  AFRAME.registerComponent('markerhandler', {
-    init: function () {
-      this.el.sceneEl.addEventListener('markerFound', () => {
-       // alert('found');
-      })
-    }
-  });
-</script>
+        // We're going to register a custom event listener through a-frame that will fire
+        // whenever a marker has entered the camera view and is found through ar.js
+        AFRAME.registerComponent('registerevents', {
+            init: function() {
+                var marker = this.el;
+
+                // Element emits events when found and lost
+                marker.setAttribute('emitevents', 'true');
+
+                marker.addEventListener('markerFound', function() {
+                    // Alright, a marker has been found. Let's get the video element
+                    var vid = document.getElementById('waterVideo');
+
+                    // Make sure that the video a-frame object is visible
+                    document.querySelector('#water').setAttribute('visible', true);
+
+                    // Reset the video to the beginning and play it through
+                    vid.currentTime = 0;
+                    vid.play();
+
+                    // Once the video has completed, we're going to hide the a-video element
+                    // which will display the a-image element with the watch behind it
+                    vid.addEventListener('ended', function(e) {
+                        document.querySelector('#water').setAttribute('visible', false);
+                    });
+                });
+            }
+        });
+    </script>
 <body style="margin : 0px; overflow: hidden;">
 <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
 <div class="arjs-loader">
@@ -44,13 +66,17 @@
         vr-mode-ui="enabled: false;"
         renderer="logarithmicDepthBuffer: true;"
         embedded
-        arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: true;"
+        arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
 >
+    <a-assets timeout="10000">
+        <img id="watchImage" src="heliacell.jpg">
+        <video id="waterVideo" loop="false" autoplay="false" src="helia.mp4" preload="auto"></video>
+    </a-assets>
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
     <!-- on 'url' use the path to the Image Descriptors created before. -->
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
-            markerhandler
+            registerevents
             type="nft"
             url="heliacellnft/heliacell2"
             smooth="true"
@@ -59,7 +85,8 @@
             smoothThreshold="5"
     >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-        <a-video src="helia.mp4" width="2" height="2" position="0 0 0"></a-video>
+        <a-image id="watch" src="#watchImage" height="2" width="1" position="0 1 0"></a-image>
+        <a-video id="water" src="#waterVideo" height="2" width="1" position="0 1 0" autoplay="false"></a-video>
 
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
