--- a/index.html
+++ b/index.html
@@ -1,31 +1,12 @@
-<!-- import aframe and then ar.js with image tracking / location based features -->
-<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-
-<!-- style for the loader -->
-<style>
-  .arjs-loader {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .arjs-loader div {
-    text-align: center;
-    font-size: 1.25em;
-    color: white;
-  }
-</style>
-
-<meta name="apple-mobile-web-app-capable" content="yes">
-<script>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>AR Demo</title>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <script>
         // We're going to register a custom event listener through a-frame that will fire
         // whenever a marker has entered the camera view and is found through ar.js
         AFRAME.registerComponent('registerevents', {
@@ -55,6 +36,9 @@
             }
         });
     </script>
+</head>
+
+
 <body style="margin : 0px; overflow: hidden;">
 <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
 <div class="arjs-loader">
@@ -93,3 +77,4 @@
     <a-entity camera></a-entity>
 </a-scene>
 </body>
+</html>
