--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 marker.addEventListener('markerFound', function() {
                     // Alright, a marker has been found. Let's get the video element
                     var vid = document.getElementById('waterVideo');
-
+                    alert('found');
                     // Make sure that the video a-frame object is visible
                     document.querySelector('#water').setAttribute('visible', true);
 
