--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
 >
     <a-assets timeout="10000">
-        <img id="watchImage" src="./heliacell.jpg">
+        <img id="watchImage" src="./5.jpg">
         <video id="waterVideo" loop="false" autoplay="false" src="./helia.mp4" preload="auto"></video>
     </a-assets>
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
